--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,79 +1,44 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import "tailwindcss";
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+@theme {
+    --font-display: "Poppins", "sans-serif";
+    --font-logo2: "Red Hat Display", sans-serif;
+    --font-logo3: "Cal Sans", "serif";
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+    --breakpoint-3xl: 120rem;
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+    --color-purple-50: #eff0fe;
+    --color-purple-100: #e2e3fd;
+    --color-purple-200: #cacbfb;
+    --color-purple-300: #acaaf7;
+    --color-purple-400: #9288f1;
+    --color-purple-500: #806be9;
+    --color-purple-600: #6741d9;
+    --color-purple-700: #6340c2;
+    --color-purple-800: #51379c;
+    --color-purple-900: #43337c;
+    --color-purple-950: #281e48;
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+    --ease-fluid: cubic-bezier(0.3, 0, 0, 1);
+    --ease-snappy: cubic-bezier(0.2, 0, 0, 1);
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+    --color-mainDarkBg: #0e0e11;
+
+    --color-mainBorder: #d1d5dc;
+    --color-grayDull: #4a5565;
+    --color-secondary: #666666;
+    --shadow-mainShadow: 0 0 20px rgba(0, 0, 0, 0.3);
+
+    --color-box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.flex-col {
+    display: flex;
+    flex-direction: column;
 }
