--- a/client/src/app/style.css
+++ b/client/src/app/style.css
@@ -43,3 +43,18 @@
     display: flex;
     flex-direction: column;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: #0e0e11;
+}
+
+::-webkit-scrollbar-thumb {
+    height: 10px;
+    background-color: #2b313a;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
