create modal where user can copy to clipdoard group share link

--- a/client/src/app/style.css
+++ b/client/src/app/style.css
@@ -25,6 +25,9 @@
     --color-mainDarkBg: #0e0e11;
     --color-mainHoverDarkBg: #17171c;
 
+    --color-mainGray: #4a5565;
+    --color-mainHoverOnGray: rgba(74, 85, 101, 0.3);
+
     --color-mainBorder: #242324;
     --color-grayDull: #4a5565;
     --color-secondary: #666666;
