create members bar, add shared UserAvatar component

--- a/client/src/app/style.css
+++ b/client/src/app/style.css
@@ -25,7 +25,7 @@
     --color-mainDarkBg: #0e0e11;
     --color-mainHoverDarkBg: #17171c;
 
-    --color-mainGray: #4a5565;
+    --color-mainGray: #ffffff1a;
     --color-mainHoverOnGray: rgba(74, 85, 101, 0.3);
 
     --color-mainBorder: #242324;
