create 2 stories for Button component, delete and save versions

--- a/client/src/app/style.css
+++ b/client/src/app/style.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+@layer base {
+    * {
+        color: white;
+    }
+}
+
 @theme {
     --font-display: "Poppins", "sans-serif";
     --font-logo2: "Red Hat Display", sans-serif;
