redesign new chat button and group list

--- a/client/src/app/style.css
+++ b/client/src/app/style.css
@@ -1,10 +1,10 @@
 @import "tailwindcss";
 
-@layer base {
+/* @layer base {
     * {
         color: white;
     }
-}
+} */
 
 @theme {
     --font-display: "Poppins", "sans-serif";
